@@ -101,11 +101,12 @@
 #define PBS_NET_RETRY_TIME     30 /* retry time between re-sending requests  */
 #define PBS_NET_RETRY_LIMIT 14400 /* max retry time */
 #define PBS_SCHEDULE_CYCLE    600 /* re-schedule even if no change, 10 min   */
-#define PBS_RESTAT_JOB	       30 /* ask mom for status only once in 30 sec  */
+#define PBS_RESTAT_JOB	       45 /* ask mom for status only once in 45 sec  */
 #define PBS_STAGEFAIL_WAIT   1800 /* retry time after stage in failure */
 #define PBS_NORMAL_PING_RATE  300 /* how often to ping the nodes */
 #define PBS_TCPTIMEOUT          6 /* timeout for pbs-mom tcp connections */
 #define PBS_JOBSTAT_MIN         4 /* minimum time between job stats */
+#define PBS_POLLJOBS         TRUE /* enable pbs_server job polling */
 
 /* Server Database information - path names */
 
